--- a/live/api/etc/live.yaml
+++ b/live/api/etc/live.yaml
@@ -12,3 +12,9 @@ Mysql:
 Redis:
   Addr: localhost:6379
   Password: '861214959'
+
+UserRpc:
+  Etcd:
+    Hosts:
+      - 127.0.0.1:2379
+    Key: user.rpc
